@@ -11,6 +11,7 @@
 	- python: hide labelCompare() underneath ds.cmp(a,b).
 	- fix: segfault on --recontext if file_contexts unreadable (#117374).
 	- fix: /etc/security/selinux/file_contexts is default path.
+	- fix: no transaction lock if --test was specified (#119783).
 
 4.2.2 -> 4.3:
 	- upgrade to zlib-1.2.beta7.
